--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -10,6 +10,9 @@ body{
     .overviewPic{
         max-width: 100% !important;
     }
+    .leaflet-popup-content{
+        max-width:255px !important;
+    }
 }
 
 @media only screen and (min-width: 40em) and (max-width: 64.063em) {
