--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -61,3 +61,10 @@ h4{
 .mapboxgl-ctrl-icon{
     margin:0 !important;
 }
+.mapboxgl-popup-content{
+    max-width: 300px !important;
+    max-height: 300px !important;
+}
+.mapboxgl-popup-content{
+    overflow-y: scroll;
+}
