--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -2,6 +2,18 @@
     height: 100%;
     width: 100%;
 }
+.small-3{
+    background-color: green;
+    min-height: 100%;
+}
+.small-9{
+    background-color: red;
+    min-height: 100%;
+}
+.row {
+    max-width: 100%;
+    height: 100%;
+}
 body{
     background-color: #555555;
 }
